@@ -11,6 +11,13 @@
  */
 package org.mini2Dx.tiled;
 
+import com.badlogic.gdx.math.MathUtils;
+import org.mini2Dx.core.exception.MdxException;
+import org.mini2Dx.core.geom.Circle;
+import org.mini2Dx.core.geom.Point;
+import org.mini2Dx.core.geom.Polygon;
+import org.mini2Dx.core.geom.Rectangle;
+
 import java.util.HashMap;
 import java.util.Map;
 
@@ -18,16 +25,26 @@ import java.util.Map;
  * Represents an object loaded from a {@link TiledMap}
  */
 public class TiledObject {
+
+	private final int id;
+	private final float x, y, width, height;
+
+	private TiledObjectShape objectShape = TiledObjectShape.RECTANGLE;
 	private String name;
 	private String type;
-	private String polyline, polygon;
-	private float x, y, width, height;
+	private String polyline;
 	private boolean visible;
 	private int gid;
 	private boolean gidFlipHorizontally, gidFlipVertically, gidFlipDiagonally;
 	private Map<String, String> properties;
+
+	private float [] points;
+	private String text;
+	private boolean wrapText;
 	
-	public TiledObject(float x, float y, float width, float height) {
+	public TiledObject(int id, float x, float y, float width, float height) {
+		super();
+		this.id = id;
 		this.x = x;
 		this.y = y;
 		this.width = width;
@@ -74,7 +91,15 @@ public class TiledObject {
 			properties = new HashMap<String, String>();
 		properties.put(propertyName, value);
 	}
-	
+
+	/**
+	 * Returns the ID of this object
+	 * @return -1 if using a version of Tiled where IDs are not generated
+	 */
+	public int getId() {
+		return id;
+	}
+
 	/**
 	 * Returns the name of this object
 	 * @return
@@ -179,6 +204,56 @@ public class TiledObject {
 		this.gidFlipDiagonally = gidFlipDiagonally;
 	}
 
+	/**
+	 * Returns the {@link TiledObjectShape} of this object
+	 * @return Defaults to {@link TiledObjectShape#RECTANGLE}
+	 */
+	public TiledObjectShape getObjectShape() {
+		return objectShape;
+	}
+
+	/**
+	 * Marks this object as a {@link TiledObjectShape#ELLIPSE}
+	 */
+	public void setAsEllipse() {
+		objectShape = TiledObjectShape.ELLIPSE;
+	}
+
+	/**
+	 * Marks this object as a {@link TiledObjectShape#POINT}
+	 */
+	public void setAsPoint() {
+		objectShape = TiledObjectShape.POINT;
+	}
+
+	/**
+	 * Marks this object as a {@link TiledObjectShape#POLYGON}
+	 * @param points The points in the format <code>x1,y1 x2,y2</code>
+	 */
+	public void setAsPolygon(String points) {
+		objectShape = TiledObjectShape.POLYGON;
+		final String [] pointEntries = points.split(" ");
+
+		this.points = new float[pointEntries.length * 2];
+		for(int i = 0; i < pointEntries.length; i++) {
+			final String [] xy = pointEntries[i].split(",");
+
+			this.points[(i * 2)] = x + Float.parseFloat(xy[0]);
+			this.points[(i * 2) + 1] = y + Float.parseFloat(xy[1]);
+		}
+	}
+
+	/**
+	 * Marks this object as a {@link TiledObjectShape#TEXT}
+	 * @param text The text to display
+	 * @param wrapText True if the text wraps
+	 */
+	public void setAsText(String text, boolean wrapText) {
+		objectShape = TiledObjectShape.TEXT;
+		this.text = text;
+		this.wrapText = wrapText;
+	}
+
 	public String getPolyline() {
 		return polyline;
 	}
@@ -187,19 +262,70 @@ public class TiledObject {
 		this.polyline = polyline;
 	}
 
-	public String getPolygon() {
-		return polygon;
-	}
-
-	public void setPolygon(String polygon) {
-		this.polygon = polygon;
-	}
-
 	public boolean isVisible() {
 		return visible;
 	}
 
 	public void setVisible(boolean visible) {
 		this.visible = visible;
+	}
+
+	/**
+	 * Creates a new {@link Point} from this object.
+	 * Warning: If this object's shape is not {@link TiledObjectShape#POINT}, an exception will be thrown.
+	 * @return A new {@link Point}
+	 */
+	public Point toPoint() {
+		if(!objectShape.equals(TiledObjectShape.POINT)) {
+			throw new MdxException("TiledObject " + id + " is not a point");
+		}
+		return new Point(x, y);
+	}
+
+	/**
+	 * Creates a new {@link Circle} from this object.
+	 * Warning: If this object's shape is not {@link TiledObjectShape#ELLIPSE}, an exception will be thrown.
+	 * @return A new {@link Circle}
+	 */
+	public Circle toCircle() {
+		if(!objectShape.equals(TiledObjectShape.ELLIPSE)) {
+			throw new MdxException("TiledObject " + id + " is not a circle");
+		}
+		if(!MathUtils.isEqual(width, height)) {
+			throw new MdxException("TiledObject " + id + " is an ellipse, not a circle");
+		}
+		return new Circle(x + (width * 0.5f), y + (height * 0.5f), width * 0.5f);
+	}
+
+	/**
+	 * Creates a new {@link Rectangle} from this object.
+	 * Warning: If this object's shape is not {@link TiledObjectShape#RECTANGLE}, an exception will be thrown.
+	 * @return A new {@link Rectangle}
+	 */
+	public Rectangle toRectangle() {
+		if(!objectShape.equals(TiledObjectShape.RECTANGLE)) {
+			throw new MdxException("TiledObject " + id + " is not a rectangle");
+		}
+		return new Rectangle(x, y, width, height);
+	}
+
+	/**
+	 * Creates a new {@link Polygon} from this object.
+	 * Warning: If this object's shape is not {@link TiledObjectShape#POLYGON}, an exception will be thrown.
+	 * @return A new {@link Polygon}
+	 */
+	public Polygon toPolygon() {
+		if(!objectShape.equals(TiledObjectShape.POLYGON)) {
+			throw new MdxException("TiledObject " + id + " is not a polygon");
+		}
+		return new Polygon(points);
+	}
+
+	public String getText() {
+		return text;
+	}
+
+	public boolean isWrapText() {
+		return wrapText;
 	}
 }
