@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<map version="1.0" tiledversion="1.1.0" orientation="orthogonal" renderorder="right-down" width="10" height="8" tilewidth="32" tileheight="32" infinite="0" backgroundcolor="#0000ff" nextobjectid="6">
+<map version="1.0" tiledversion="2018.08.06" orientation="orthogonal" renderorder="right-down" width="10" height="8" tilewidth="32" tileheight="32" infinite="0" backgroundcolor="#0000ff" nextlayerid="7" nextobjectid="16">
  <properties>
   <property name="testMapProperty" value="SUCCESS"/>
  </properties>
@@ -25,17 +25,17 @@
    </animation>
   </tile>
  </tileset>
- <layer name="Ground" width="10" height="8">
+ <layer id="1" name="Ground" width="10" height="8">
   <data encoding="base64" compression="zlib">
    eJxjZGBgYCKAmYFYEIiFCGBhJHWGQKyEho2wqAOxN6FhQQrUOWJxvxMWdYT8oYjF/ehYGYgBhUoLPw==
   </data>
  </layer>
- <layer name="Animated" width="10" height="8">
+ <layer id="2" name="Animated" width="10" height="8">
   <data encoding="base64" compression="zlib">
    eJxjYBgFMDCPSHVrkdgAKXQBTA==
   </data>
  </layer>
- <layer name="Collisions" width="10" height="8">
+ <layer id="3" name="Collisions" width="10" height="8">
   <properties>
    <property name="testLayerProperty" value="SUCCESS"/>
   </properties>
@@ -43,7 +43,7 @@
    eJxjYBhcYBkDgwMRahqA+AEW8QVAfIAI/SCcQIbzMAAAsLUH6w==
   </data>
  </layer>
- <objectgroup name="Objects">
+ <objectgroup id="4" name="Objects">
   <object id="1" name="test2" type="failure" x="260" y="192" width="24" height="16">
    <properties>
     <property name="testProperty" value="SUCCESS2"/>
@@ -56,7 +56,22 @@
   </object>
   <object id="5" name="flipped_tile_object" gid="3221225628" x="288" y="128" width="32" height="32"/>
  </objectgroup>
- <layer name="Higher" width="10" height="8">
+ <objectgroup id="6" name="Shapes">
+  <object id="11" name="point" x="64" y="160">
+   <point/>
+  </object>
+  <object id="12" name="rectangle" x="32" y="192" width="64" height="32"/>
+  <object id="13" name="circle" x="96" y="128" width="32" height="32">
+   <ellipse/>
+  </object>
+  <object id="14" name="polygon" x="128" y="224">
+   <polygon points="0,0 32,-64 64,-32"/>
+  </object>
+  <object id="15" name="text" x="160" y="0" width="89.5469" height="18.8438">
+   <text wrap="1">Hello World</text>
+  </object>
+ </objectgroup>
+ <layer id="5" name="Higher" width="10" height="8">
   <data encoding="base64" compression="zlib">
    eJzby8DAcJaBYcFeIGZAA0CxBqDcAyD94CyEnwCkE/YD2QeAGEYDxRqAcgpnIfgATP95IL6ARAPlHJDMhqu7D8QPkOi9SOoGOwAAMVQdCw==
   </data>
