@@ -1,4 +1,5 @@
 [1.7.14-SNAPSHOT]
+- (#76) Added support for Tiled object shapes
 - (#77) Fixed fade transitions modifying the color instance
 
 [1.7.13]
